--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">food_hub</string>
+    <string name="app_name">food_hub</string>  
+    <string name="facebook_app_id">1039725021086658</string>
+    <string name="fb_login_protocol_scheme">fb1039725021086658</string>
+    <string name="facebook_client_token">d121a4c54e9fe3276b970523bd02548e</string>
 </resources>
